applications/media-server/manifests/prowlarr-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prowlarr
  namespace: media
spec:
  tls:
    - hosts: [ "prowlarr.mrcontainer.nl" ]
      secretName: prowlarr-tls
  rules:
    - host: prowlarr.mrcontainer.nl
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: prowlarr
                port:
                  number: 9696
